--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	background-image: url("images/Bg.jpg");
-	background-repeat: no-repeat;
+	/* background-repeat: no-repeat; */
 }
 
 .topnav {
@@ -76,9 +76,9 @@ body{
   }
 
   #add_toppings{
-    padding-left:30px;
-	width:200px;
-	height:180px;
+	/* padding-left:30px; */
+	width:150px;
+	height:100px;
 	border: none;
 	background-color:#e2062c;
 	color:black;
@@ -92,7 +92,7 @@ body{
 	line-height: 20px;
 	width: 80%;
 	height: 50px;
-	color: #fff;
+	color: #ffffff;
     background: none;
     border: none;
     border-bottom: 1px solid rgb(223, 205, 205);
@@ -106,27 +106,7 @@ body{
 	color: white;
  }
 
-ol.menulist>li
-{
-	padding-bottom:20px;
-}
-
-.cards {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
- }
- 
- div.card {
-    flex: 0 0 30%;
-	box-sizing: border-box;
-	color:black;
-	margin: 0.5rem .18em;
-	background-color: antiquewhite;
-	align-items: center;
-	font-size: medium;
-}
-.card img{
+#im1{
 	width:100px;
 	height: 80px;
 }
